# programming-1-final-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Reservation_date.c  reservation date.c
.devcontainer/: devcontainer.json
include/: libdate.c  libdate.h  libparse.c  libparse.h
include/libui/: charcodes.h  io.c  io.h  platform.c
lib/libui/: io.c  io.h  platform.c  platform.h
src/: libui.c  libui.h  login.c  login.h  main.c  platform.c  platform.h  ui.c  ui.h
src/hotel/: login.c  login.h  management.c  management.h
src/hotel/auth/: login.c  login.h
src/hotel/management/: reservations.c  reservations.h  rooms.c  rooms.h
src/libui/: charcodes.h  io.c
src/tests/test1/: Reservation.txt  users.txt
src/ui/: main_menu.c  root_menu.c  root_menu.h  status.h  status_codes.h  ui.h
src/ui/menus/: availability.c  availability.h  cancel_reservation.c  cancel_reservation.h  check_in.c  check_in.h  check_out.c  check_out.h  edit_reservation.c  edit_reservation.h  exit_menu.c  exit_menu.h  login.c  login.h  main.c  main.h  query.c  query.h  reservation.c  reservation.h  reservation_report.c  reservation_report.h  root.c  root.h  status.h  view_customer_details.c  view_customer_details.h
tests/colors/: colors.c  tempCodeRunnerFile.c
tests/reservations/: Reservation.txt
tests/rooms/: Room.txt
tests/test1/: Reservation.txt  login.c  users.txt
tests/users/: users.txt
